--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -3875,7 +3875,7 @@ input.main-search-input:-ms-input-placeholder {
   margin-top: 8px;
 }
 .widget_address__icon i {
-  color: #091c40;
+  color: #fff;
   font-size: 37px;
 }
 .widget_address__content h4 {
