--- a/templates/biography.html
+++ b/templates/biography.html
@@ -13,10 +13,10 @@
                     <div class="col-xl-5 mx-auto">
                         <div class="page-title-wrapper text-center pt-125">
                             <div class="page-title-box">
-                                <h2 class="page-title">Biography</h2>
+                                <h2 class="page-title">Srila Prabhupada's Biography</h2>
                                 <ul class="breadcrumb-list">
                                     <li><a href="{% url 'index' %}">Home <i class="far fa-chevron-right"></i></a></li>
-                                    <li><a href="#" class="active">Biography</a></li>
+                                    <li><a href="#" class="active">Srila Prabhupada's Biography</a></li>
                                 </ul>
                             </div>
                         </div>
