--- a/templates/books.html
+++ b/templates/books.html
@@ -13,10 +13,10 @@
                     <div class="col-xl-5 mx-auto">
                         <div class="page-title-wrapper text-center pt-125">
                             <div class="page-title-box">
-                                <h2 class="page-title">Books</h2>
+                                <h2 class="page-title">Srila Prabhupada Books</h2>
                                 <ul class="breadcrumb-list">
                                     <li><a href="{% url 'index' %}">Home <i class="far fa-chevron-right"></i></a></li>
-                                    <li><a href="#" class="active">Books Details</a></li>
+                                    <li><a href="#" class="active">Srila Prabhupada Books</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -44,6 +44,7 @@
                                     <h3 class="blog-title mb-20"><a href="blog-details.html">{{i.title}}</a></h3>
 
                                         {{i.content |safe}}
+                                    <a style="color:red;"  href="/bbooks">Click here</a>  to read a collection of Scholarly Appreciations of Srila Prabhupada’s Books. These books can change your life. Try it out. Refer to the Catalog of Srila Prabhupada’s Books.
                                 </div>
                             </div>
                         </div>
