--- a/templates/events-details.html
+++ b/templates/events-details.html
@@ -1,24 +1,21 @@
 {% include 'base.html' %}
-
-
  {% block content %}
-
-
     <main>
-
         <!--page-title-area start-->
         <section class="page-title-area" style="background-image: url(/static/assets/img/bg/page-title.jpg);">
             <div class="container pos-rel">
                 <div class="row">
                     <div class="col-xl-5 mx-auto">
                         <div class="page-title-wrapper text-center pt-125">
+                              {% for i in fest %}
                             <div class="page-title-box">
-                                <h2 class="page-title">vastrabarana</h2>
+                                <h2 class="page-title">{{i.title}}</h2>
                                 <ul class="breadcrumb-list">
                                     <li><a href="{% url 'index' %}">Home <i class="far fa-chevron-right"></i></a></li>
-                                    <li><a href="#" class="active">vastrabarana Details</a></li>
+                                    <li><a href="#" class="active">{{i.title}} Details</a></li>
                                 </ul>
                             </div>
+                            {%endfor%}
                         </div>
                     </div>
                 </div>
@@ -41,7 +38,7 @@
                                 </div>
                                 <div class="blog__content">
 
-                                    <h3 class="blog-title mb-20"><a href="blog-details.html">{{i.title}}</a></h3>
+                                    <h3 class="blog-title mb-20">{{i.title}}</h3>
                                     <ul class="blog-author mb-20">
 
 <!--                                            <li>-->
@@ -56,10 +53,6 @@
                         </div>
                         {% endfor %}
                     </div>
-
-
-
-
                     {% include 'eventsidebar.html' %}
                 </div>
             </div>
