--- a/templates/footer.html
+++ b/templates/footer.html
@@ -24,7 +24,7 @@ Upcoming Events
                         <ul class="fot-list">
                             <li><a href="/about"><i class="far fa-angle-double-right"></i> About Us</a></li>
                             <li><a href="/festival"><i class="far fa-angle-double-right"></i> Festivals</a></li>
-                            <li><a href="#"><i class="far fa-angle-double-right"></i> Seva's</a></li>
+                            <li><a href="/activity"><i class="far fa-angle-double-right"></i> Activities</a></li>
                             <li><a href="/donate"><i class="far fa-angle-double-right"></i> Donate</a></li>
                             <li><a href="/contact"><i class="far fa-angle-double-right"></i> Contact</a></li>
                             <li><a href="/gallery"><i class="far fa-angle-double-right"></i> Our Photo Gallery</a></li>
