--- a/templates/sirlasidebar.html
+++ b/templates/sirlasidebar.html
@@ -4,9 +4,9 @@
                             <div class="widget mb-30 wow fadeInUp2 animated" data-wow-delay='.1s'>
                                 <ul class="widget-cat">
                                     <h3 class="cases-title mb-30">Srila Prabhupada</h3>
-                                    <li><a href="/archana"> <i class="far fa-angle-double-right"></i> Our Archana </a></li>
-                                    <li><a href="/biography"> <i class="far fa-angle-double-right"></i> Biography  </a></li>
-                                    <li><a href="/books"> <i class="far fa-angle-double-right"></i> Books </a></li>
+                                    <li><a href="/archana"> <i class="far fa-angle-double-right"></i> Our Acharya </a></li>
+                                    <li><a href="/biography"> <i class="far fa-angle-double-right"></i> Srila Prabhupada’s Biography  </a></li>
+                                    <li><a href="/books"> <i class="far fa-angle-double-right"></i>Srila Prabhupada  Books </a></li>
                                     <li><a href="/lectures"> <i class="far fa-angle-double-right"></i> Lectures </a></li>
                                     <li><a href="/bhajana"> <i class="far fa-angle-double-right"></i> Bhajans and Kirtans</a></li>
                                 </ul>
